--- a/E_TICARET_2023/Views/Ürünler/Details.cshtml
+++ b/E_TICARET_2023/Views/Ürünler/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.UrunId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Ürünleri Düzenle", "Edit", new { id = Model.UrunId }) |
+    @Html.ActionLink("Listeye Geri Dön", "Index")
 </p>
