--- a/E_TICARET_2023/Views/Home/Index.cshtml
+++ b/E_TICARET_2023/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <main>
-   
+
 
     <div class="row">
         <section class="col-md-3" aria-labelledby="gettingStartedTitle">
@@ -18,16 +18,33 @@
                     </li>
                 }
             </ul>
-          
+
         </section>
         <section class="col-md-9" aria-labelledby="librariesTitle">
             <h2 id="librariesTitle">Ürün Bilgileri</h2>
             <div class="row">
                 @foreach (var item in (List<Ürünler>)ViewBag.UrunListesi)
-                 {
-                    <div class="col-md-4" style="border:1px solid">@*//yan yana 3 ürün gelsin*@
-                        <h5>@item.UrunAdi</h5>
-                      
+                {
+
+
+                    <div  class="card border-warning mb-9"style="width: 20rem;">
+
+                        <h5 class="card-title">@item.UrunAdi</h5>
+                        <img src="~/Resim/@(item.UrunId).jpg" width="100" height="100" />
+
+                        <div class="card-body" style="display:inline-block;">
+                            <a href="/Home/UrunDetay/@item.UrunId" class="btn btn-warning">Ürün Detay</a>
+                            <span style="display:flex; justify-content:right;align-items:flex-end;margin-top:16px; font-size:14px;font-weight:bold;float:right">@item.UrunFiyati TL</span>
+                        </div>
+                    </div>
+
+
+
+
+                    <!--<div class="col-md-4" style="border:1px solid">-->
+                    @*//yan yana 3 ürün gelsin*@
+                    <!--<h5>@item.UrunAdi</h5>
+
                         <div>
                             <img src="~/Resim/@(item.UrunId).jpg" width="100" />
                         </div>
@@ -40,14 +57,14 @@
                                 <span style="font-size:14px;font-weight:bold;float:right">@item.UrunFiyati TL</span>
                             </div>
                         </p>
-                                                     
-                       
 
-                    </div>
-                 }
+
+
+                    </div>-->
+                }
 
             </div>
         </section>
-       
+
     </div>
 </main>
