--- a/E_TICARET_2023/Views/Home/UrunDetay.cshtml
+++ b/E_TICARET_2023/Views/Home/UrunDetay.cshtml
@@ -29,25 +29,26 @@
 
             <h5>@Model.UrunAdi</h5> @*//Ürün bilgileri alındı*@
 
-            <div class="row">
+        <div class="row">
 
-                <div class="col-md-6">
-                    <img src="~/Resim/@(Model.UrunId).jpg" width="100" />
-                </div>
-
-                <div class="col-md-6">
-                    Ürün Fiyatı:<span style="font-size:14px;font-weight:bold;float:right">@Model.UrunFiyati TL</span>
-                    @*//inputlar post edilecek hangi elementler post edilecekse form elenementinin içine alınacak*@
-                    @using (Html.BeginForm("SepeteEkle","Sepet"))
-                    {
-                        @Html.HiddenFor(x=>x.UrunId)
-                        <input type="submit" id="sepetbtn" value="Sepete Ekle" />
-                        <input type="number" id="adet" value="1" />
-                    }
-
-                </div>
-
+            <div class="col-md-6">
+                <img src="~/Resim/@(Model.UrunId).jpg" width="100" />
             </div>
+
+            <div class="col-md-6">
+                Ürün Fiyatı:<span style="font-size:14px;font-weight:bold;float:right">@Model.UrunFiyati TL</span>
+                @*//inputlar post edilecek hangi elementler post edilecekse form elenementinin içine alınacak*@
+                @using (Html.BeginForm("SepeteEkle","Sepet"))
+                {
+                    @Html.HiddenFor(x => x.UrunId)
+                    <input type="submit" id="sepetbtn" value="Sepete Ekle" />
+                    <input type="number" name="adet" value="1" style="width:50px" />
+                }
+            </div>
+            <h2>Ürün Açıklaması</h2>
+            <hr />
+            <p>@Model.UrunAciklamasi</p>
+        </div>
 
         </section>
 
