--- a/E_TICARET_2023/Views/Shared/_LoginPartial.cshtml
+++ b/E_TICARET_2023/Views/Shared/_LoginPartial.cshtml
@@ -5,14 +5,18 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Merhaba   " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class="nav-link" })
-        </li>
-        <li><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Çıkış</a></li>
-    </ul>
+<ul class="navbar-nav navbar-right">
+    <li>
+        @Html.ActionLink("Merhaba     " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+    </li>
+    <li>
+        @Html.ActionLink("Sepet" , "Index", "Sepet", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+    </li>
+    <li><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Çıkış</a></li>
+</ul>
     }
 }
+
 else
 {
     <ul class="navbar-nav navbar-right">
