--- a/E_TICARET_2023/Views/Shared/_Layout.cshtml
+++ b/E_TICARET_2023/Views/Shared/_Layout.cshtml
@@ -7,10 +7,34 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+<style>
+    #bottom {
+        float: right;
+        margin-top: 3px;
+        border:1px;
+        border-radius:500px;
+    }
+    #bottom:hover{
+        background-color:#528fe1cc;
+    }
+
+    #top {
+        float: right;
+        margin-bottom: 3px;
+        border: 1px;
+        border-radius: 500px;
+    }
+    #top:hover {
+        background-color: #528fe1cc;
+    }
+</style>
 
 </head>
 <body>
@@ -38,22 +62,46 @@
                     }
 
                 </ul>
+
                 @Html.Partial("_LoginPartial")
+
             </div>
         </div>
     </nav>
 
+
     <div class="clearfix"></div>
     <div class="container body-content">
+        <input type="button" id="bottom" onclick="scrollToBottom()" value="| ↓ |" />
+
         @RenderBody()
-        <hr />
+
+        <input type="button" onclick="scrollToTop()" value="| ↑ |" id="top" />
     </div>
 
-    <footer class="bottom-0 position-relative" style="float:inline-end; ">
+    
+
+    <footer class="bottom-0 position-relative" style="float:inline-end;" id="footer">
         <p>&copy; @DateTime.Now.Year - E-Ticaret</p>
+
+
     </footer>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+
+   
 </body>
 </html>
+<script>
+
+    function scrollToTop() {
+        window.scrollTo(0, 0); // Sayfanın en üstüne kaydır
+    }
+    function scrollToBottom() {
+        window.scrollTo(0, document.body.scrollHeight); // Sayfanın en altına kaydır
+    }
+
+</script>
