--- a/E_TICARET_2023/Views/Home/Index.cshtml
+++ b/E_TICARET_2023/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
     <div class="flex-container">
         @foreach (var item in (List<Ürünler>)ViewBag.UrunListesi)
         {
-            <div class="flex-item col-md-4">
+            <div class="flex-item ">
                 <div class="uruns">
                     <h5>@item.UrunAdi</h5>
                     <img id="image" src="~/Resim/@(item.UrunId).jpg" />
