--- a/E_TICARET_2023/Resim/style.css
+++ b/E_TICARET_2023/Resim/style.css
@@ -1,1 +1,33 @@
-﻿
+﻿@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.animated-element {
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes rotate360 {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rotate-image {
+    transition: transform 1s ease-in-out;
+}
+
+    .rotate-image:hover {
+        animation: rotate360 2s linear infinite;
+    }
+
